# beam

./: .gitignore  CMakeLists.txt  main
accelerators/: bvh.cpp  bvh.h
core/: camera.h  film.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  light.h  main.cpp  primitive.h  sampler.h  scene.cpp  scene.h  shape.h
integrators/: whitted.cpp  whitted.h
lights/: point.h
samplers/: random.h
scenes/: default.scene
shapes/: sphere.cpp  sphere.h
structs/: hitinfo.h
